--- a/Day1_train.csv.ipynb
+++ b/Day1_train.csv.ipynb
@@ -227,27 +227,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "828338df-5876-4eef-bc85-17c74b851cad",
+   "cell_type": "markdown",
+   "id": "563af619-cde6-4452-9c46-b184d9e6bdba",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '→' (U+2192) (2699941606.py, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[27], line 6\u001b[1;36m\u001b[0m\n\u001b[1;33m    → 각각 비율을 보여주는 거야.\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character '→' (U+2192)\n"
-     ]
-    }
-   ],
    "source": [
-    "**value_counts(normalize=True)는\n",
+    "value_counts(normalize=True)는\n",
     "\n",
     "0이 몇 명(퍼센트)\n",
     "\n",
     "1이 몇 명(퍼센트)\n",
-    "→ 각각 비율을 보여주는 거야.\n",
+    "각각 비율을 보여주는 거야.\n",
     "\n",
     "mean()은\n",
     "\n",
